manifests/2-apps.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redirector
  namespace: shortener
spec:
  type: ClusterIP
  selector:
    app: redirector
  ports:
  - port: 3001
    targetPort: 3001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redirector
  namespace: shortener
spec:
  replicas: 1
  selector:
    matchLabels:
      &pod-labels
      app: redirector
  template:
    metadata:
      labels:
        <<: *pod-labels
    spec:
      containers:
      - name: redirector
        image: chukmunnlee/jredirector:v1.1-jdk21
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001

---
apiVersion: v1
kind: Service
metadata:
  name: shortener
  namespace: shortener
spec:
  type: ClusterIP
  selector:
    app: shortener
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortener
  namespace: shortener
spec:
  replicas: 1
  selector:
    matchLabels:
      &pod-labels
      app: shortener
  template:
    metadata:
      labels:
        <<: *pod-labels
    spec:
      containers:
      - name: shortener
        image: chukmunnlee/shortener:v1-demo
        imagePullPolicy: IfNotPresent
        command:
        - /bin/sh
        - -c
        - "npm run shortener"
        ports:
        - containerPort: 3000

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shortener-httproute
  namespace: shortener
spec:
  parentRefs:
  - name: default-gtw
    namespace: default
  hostnames:
  - shortener.192.168.39.200.nip.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: shortener
      namespace: shortener
      port: 3000
